syntax = "proto3";
package proto;

import "google/protobuf/struct.proto";

option go_package = "github.com/ferza17/ecommerce-microservices-v2/email-service/model/rpc/pb";

message NotificationTemplate {
  string id = 1;
  string type = 2;
  string template = 3;
  google.protobuf.Struct templateVars = 4;
}

enum NotificationTypeEnum {
  NOTIFICATION_EMAIL_USER_OTP = 0;
}

message SendOtpEmailNotificationRequest {
  string otp = 1;
  string email = 2;
  NotificationTypeEnum notificationType = 3;
}